# silver

./: .gitattributes  .gitignore  README.md  ee.py  pyproject.toml
docs/: swave.md
samples/audio/wav/: status.md
silver/: __init__.py  _config.py  config.py  format.py  fsig.py  protocols.py  signatures.py  silver.py  types.py  utils.py
silver/audio/wave/: README.md  _format_codes.py  _storage.py  chunks.py  chunky.py  ck_acid.py  ck_cart.py  ck_chna.py  ck_data.py  ck_fact.py  ck_fmt.py  ck_info.py  ck_inst.py  ck_levl.py  ck_smpl.py  ck_strc.py  dolby.py  wave.py  wavlike.py
src/: _version.py  format.py  protocols.py  signatures.py  silver.py  utils.py
src/audio/wave/: chunky.py  errors.py  wave.py
tests/: test_detection.py  test_format_detection.py  test_inputs.py  test_protocols.py  test_swave.py
tests/audio/wave/: test_chunks.py  test_wavlike.py
