[tool.poetry]
name = "silver"
version = "0.1.0"
description = ""
authors = ["janusmiracle <janusmiracle@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
